# eagle-ai

./: .appveyor.yml  .gitignore  pnpm-lock.yaml
.github/workflows/: build-windows.yml
apps/eagle-ai/: .gitignore  build_log.txt  index.html  package.json  state.txt  vite.config.ts
apps/eagle-ai/public/: G36_clean.csv  key.txt  splash.html
apps/eagle-ai/src/: App.tsx  index.css
apps/eagle-ai/src-python/: build_backend.py  eagle-sidecar.spec  engine.py  main.py  persistence.py  requirements.txt  setup_env.sh
apps/eagle-ai/src-python/core/: config.py
apps/eagle-ai/src-python/routers/: data_router.py  eagle_ai.py  eagleai.py  model_adaptor.py
apps/eagle-ai/src-python/services/: ai_engine.py  db_connector.py  db_sync_service.py
apps/eagle-ai/src-python/state/: eagle_ai_state.json  eagleai_predictions.json  machines_pred.json  predictions.json
apps/eagle-ai/src-tauri/: Cargo.toml  tauri.conf.json
apps/eagle-ai/src-tauri/capabilities/: default.json
apps/eagle-ai/src-tauri/icons/: icon.icns
apps/eagle-ai/src-tauri/src/: lib.rs  main.rs
apps/eagle-ai/src/components/: DatabaseSettings.tsx  MachineCard.tsx  SplashScreen.tsx
apps/eagle-ai/src/components/ui/: IndustrialDialog.tsx
apps/eagle-ai/src/hooks/: useIndustrialState.ts  useLicense.ts
apps/eagle-ai/src/layouts/: DashboardLayout.tsx
apps/eagle-ai/src/lib/: colors.ts
apps/eagle-ai/src/pages/: About.tsx  ContactDeveloper.tsx  Dashboard.tsx  Dashboard.tsx.backup  DataInput.tsx  Licensing.tsx  Licensing.tsx.backup  Maintenance.tsx  Repair.tsx  Settings.tsx  TestMode.tsx
