[package]
name = "eagle-ai"
version = "1.0.0"
description = "EagleAI — Predictive Maintenance ST Edition"
authors = ["Eagle Team"]
edition = "2021"

[lib]
name = "eagle_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
chrono = { version = "0.4.44", features = ["clock"] }
